<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.login.LoginActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glLimiteIzquierdo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/GlobalMarginSideSmartSolar" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glLimiteDerecho"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/GlobalMarginSideSmartSolar" />

    <ImageView
        android:id="@+id/ivLoginIberdrola"
        android:layout_width="0dp"
        android:layout_height="@dimen/dimen_size_100"
        android:layout_marginStart="@dimen/dimen_size_100"
        android:layout_marginEnd="@dimen/dimen_size_100"
        android:src="@drawable/ic_logo_iberdrola_cli"
        android:contentDescription="@string/ivLoginIberdrolaContentDescription"
        app:layout_constraintEnd_toStartOf="@+id/glLimiteDerecho"
        app:layout_constraintStart_toStartOf="@+id/glLimiteIzquierdo"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tietLoginUsuario"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_size_150"
        app:layout_constraintEnd_toStartOf="@+id/glLimiteDerecho"
        app:layout_constraintStart_toStartOf="@+id/glLimiteIzquierdo"
        app:layout_constraintTop_toBottomOf="@+id/ivLoginIberdrola" >

        <com.google.android.material.textfield.TextInputEditText
            style="@style/login_text_input_edit_text"
            android:hint="@string/etLoginUsuarioHint"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>
    
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tietLoginContraseña"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        app:layout_constraintEnd_toStartOf="@+id/glLimiteDerecho"
        app:layout_constraintStart_toStartOf="@+id/glLimiteIzquierdo"
        app:layout_constraintTop_toBottomOf="@+id/tietLoginUsuario">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/login_text_input_edit_text"
            android:hint="@string/etLoginContraseñaHint"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/chLoginRecordarContraseña"
        style="@style/NormalTextFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chLoginRecordarContraseñaText"
        app:layout_constraintStart_toStartOf="@+id/glLimiteIzquierdo"
        app:layout_constraintTop_toBottomOf="@+id/tietLoginContraseña" />

    <CheckedTextView
        android:id="@+id/chLoginDatosOlvidados"
        style="@style/NormalTextFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="@dimen/dimen_size_5"
        android:text="@string/chLoginDatosOlvidadosText"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/glLimiteIzquierdo"
        app:layout_constraintTop_toBottomOf="@+id/chLoginRecordarContraseña" />

    <Button
        android:id="@+id/btLoginEntrar"
        style="@style/botones_primarios"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_size_150"
        android:layout_marginStart="@dimen/dimen_size_40"
        android:layout_marginEnd="@dimen/dimen_size_40"
        android:text="@string/btLoginEntrarText"
        app:layout_constraintEnd_toStartOf="@+id/glLimiteDerecho"
        app:layout_constraintStart_toStartOf="@+id/glLimiteIzquierdo"
        app:layout_constraintTop_toBottomOf="@+id/chLoginDatosOlvidados" />

    <Button
        android:id="@+id/btLoginRegistrarte"
        style="@style/boton_login_registrate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_size_40"
        android:layout_marginTop="@dimen/dimen_size_16"
        android:layout_marginEnd="@dimen/dimen_size_40"
        android:text="@string/btLoginRegistrarteText"
        app:layout_constraintEnd_toStartOf="@+id/glLimiteDerecho"
        app:layout_constraintStart_toStartOf="@+id/glLimiteIzquierdo"
        app:layout_constraintTop_toBottomOf="@+id/dvLoginTambien" />

    <LinearLayout
        android:id="@+id/dvLoginTambien"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_size_16"
        android:orientation="horizontal"
        app:layout_constraintEnd_toStartOf="@+id/glLimiteDerecho"
        app:layout_constraintStart_toStartOf="@+id/glLimiteIzquierdo"
        app:layout_constraintTop_toBottomOf="@+id/btLoginEntrar">

        <View
            android:id="@+id/first_divider"
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@color/grey" />

        <TextView
            android:id="@+id/dvLoginTambienPuede"
            style="@style/NormalTextFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/dvLoginTambienPuedeText"
            android:textColor="@color/grey" />

        <View
            android:id="@+id/second_divider"
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@color/grey" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>