<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.login.SignupActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glLimiteIzquierdo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/GlobalMarginSideSmartSolar" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glLimiteDerecho"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/GlobalMarginSideSmartSolar" />

    <ImageView
        android:id="@+id/ivSignupIberdrola"
        android:layout_width="0dp"
        android:layout_height="@dimen/dimen_size_100"
        android:layout_marginStart="@dimen/dimen_size_100"
        android:layout_marginEnd="@dimen/dimen_size_100"
        android:src="@drawable/ic_logo_iberdrola_cli"
        android:contentDescription="@string/ivLoginIberdrolaContentDescription"
        app:layout_constraintEnd_toStartOf="@+id/glLimiteDerecho"
        app:layout_constraintStart_toStartOf="@+id/glLimiteIzquierdo"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilSignupUsuario"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_size_150"
        app:layout_constraintEnd_toStartOf="@+id/glLimiteDerecho"
        app:layout_constraintStart_toStartOf="@+id/glLimiteIzquierdo"
        app:layout_constraintTop_toBottomOf="@+id/ivSignupIberdrola" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietSignupUsuario"
            style="@style/login_text_input_edit_text"
            android:hint="@string/etLoginUsuarioHint"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilSignupContraseña"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_size_20"
        app:passwordToggleEnabled="true"
        app:layout_constraintEnd_toStartOf="@+id/glLimiteDerecho"
        app:layout_constraintStart_toStartOf="@+id/glLimiteIzquierdo"
        app:layout_constraintTop_toBottomOf="@+id/tilSignupUsuario">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietSignupContraseña"
            style="@style/login_text_input_edit_text"
            android:hint="@string/etLoginContraseñaHint"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilSignupRepetirContraseña"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_size_20"
        app:passwordToggleEnabled="true"
        app:layout_constraintEnd_toStartOf="@+id/glLimiteDerecho"
        app:layout_constraintStart_toStartOf="@+id/glLimiteIzquierdo"
        app:layout_constraintTop_toBottomOf="@+id/tilSignupContraseña">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietSignupRepetirContraseña"
            style="@style/login_text_input_edit_text"
            android:hint="@string/etSignupReptirContraseñaHint"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btSignupRegistrarse"
        style="@style/botones_primarios"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_size_40"
        android:layout_marginEnd="@dimen/dimen_size_40"
        android:layout_marginBottom="@dimen/dimen_size_16"
        android:text="@string/btSignupRegistrarseText"
        app:layout_constraintBottom_toTopOf="@+id/dvLoginTambien"
        app:layout_constraintEnd_toStartOf="@+id/glLimiteDerecho"
        app:layout_constraintStart_toStartOf="@+id/glLimiteIzquierdo" />

    <Button
        android:id="@+id/btSignupIniciarSesion"
        style="@style/boton_login_registrate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_size_40"
        android:layout_marginEnd="@dimen/dimen_size_40"
        android:layout_marginBottom="@dimen/dimen_size_20"
        android:text="@string/btSignupIniciarSesionText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/glLimiteDerecho"
        app:layout_constraintStart_toStartOf="@+id/glLimiteIzquierdo" />

    <LinearLayout
        android:id="@+id/dvLoginTambien"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_size_16"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/btSignupIniciarSesion"
        app:layout_constraintEnd_toStartOf="@+id/glLimiteDerecho"
        app:layout_constraintStart_toStartOf="@+id/glLimiteIzquierdo">

        <View
            android:id="@+id/first_divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@color/grey" />

        <TextView
            android:id="@+id/dvSignupTambienPuede"
            style="@style/NormalTextFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/dvLoginTambienPuedeText"
            android:textColor="@color/grey" />

        <View
            android:id="@+id/second_divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@color/grey" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>