<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.listafacturas.FiltrarFacturasFragment">

    <ScrollView
        android:id="@+id/nsvScrollFiltrarFacturas"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_size_0"
        android:layout_marginBottom="@dimen/dimen_size_20"
        app:layout_constraintBottom_toTopOf="@+id/btAplicarFiltroFiltrarFactura"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvTitleFiltrarFactura"
                style="@style/TitleFragment"
                android:text="@string/tvTitleFiltrarFacturaText"
                app:layout_constraintEnd_toStartOf="@+id/dlMargenDerechoFiltrarFactura"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/dlMargenIzquierdoFiltrarFactura"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvTitleFechaFiltrarFactura"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_size_20"
                android:text="@string/tvTitleFechaFiltrarFacturaText"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/tvTitleFiltrarFactura"
                app:layout_constraintTop_toBottomOf="@+id/tvTitleFiltrarFactura" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btFechaDesdeFiltrarFactura"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dimen_size_40"
                android:layout_marginTop="@dimen/dimen_size_6"
                android:background="@drawable/shape_fecha_button_background"
                android:ems="8"
                android:hint="@string/btFechaFiltrarFacturaText"
                android:textAllCaps="false"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="@+id/dlMargenIzquierdoFiltrarFactura"
                app:layout_constraintTop_toBottomOf="@+id/tvFechaDesdeFiltrarFactura" />

            <TextView
                android:id="@+id/tvFechaDesdeFiltrarFactura"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_size_16"
                android:text="@string/tvFechaDesdeFiltrarFacturaText"
                android:textColor="@color/grey"
                app:layout_constraintStart_toStartOf="@+id/dlMargenIzquierdoFiltrarFactura"
                app:layout_constraintTop_toBottomOf="@+id/tvTitleFechaFiltrarFactura" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btFechaHastaFiltrarFactura"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dimen_size_40"
                android:layout_marginStart="@dimen/dimen_size_16"
                android:layout_marginTop="@dimen/dimen_size_6"
                android:background="@drawable/shape_fecha_button_background"
                android:ems="8"
                android:hint="@string/btFechaFiltrarFacturaText"
                android:textAllCaps="false"
                android:textColor="@color/black"
                app:layout_constraintStart_toEndOf="@+id/btFechaDesdeFiltrarFactura"
                app:layout_constraintTop_toBottomOf="@+id/tvFechaHastaFiltrarFactura" />

            <TextView
                android:id="@+id/tvFechaHastaFiltrarFactura"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_size_16"
                android:layout_marginTop="@dimen/dimen_size_16"
                android:text="@string/tvFechaHastaFiltrarFacturaText"
                android:textColor="@color/grey"
                app:layout_constraintStart_toEndOf="@+id/btFechaDesdeFiltrarFactura"
                app:layout_constraintTop_toBottomOf="@+id/tvTitleFechaFiltrarFactura" />

            <View
                android:id="@+id/dFechaImporteFiltrarFactura"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_size_1"
                android:layout_marginStart="@dimen/dimen_size_12"
                android:layout_marginTop="@dimen/GlobalMarginTopFiltrarFacturas"
                android:layout_marginEnd="@dimen/dimen_size_12"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="@id/dlMargenDerechoFiltrarFactura"
                app:layout_constraintStart_toStartOf="@+id/dlMargenIzquierdoFiltrarFactura"
                app:layout_constraintTop_toBottomOf="@+id/btFechaHastaFiltrarFactura" />

            <View
                android:id="@+id/dImporteEstadoFiltrarFactura"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_size_1"
                android:layout_marginStart="@dimen/dimen_size_12"
                android:layout_marginTop="@dimen/GlobalMarginTopFiltrarFacturas"
                android:layout_marginEnd="@dimen/dimen_size_12"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="@+id/dlMargenIzquierdoFiltrarFactura"
                app:layout_constraintStart_toStartOf="@id/dlMargenDerechoFiltrarFactura"
                app:layout_constraintTop_toBottomOf="@+id/sbImporteFiltrarFactura" />

            <TextView
                android:id="@+id/tvTitleImporteFiltrarFactura"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/GlobalMarginTopFiltrarFacturas"
                android:text="@string/tvTitleImporteFiltrarFacturaText"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/dlMargenIzquierdoFiltrarFactura"
                app:layout_constraintTop_toBottomOf="@+id/dFechaImporteFiltrarFactura" />

            <androidx.appcompat.widget.AppCompatSeekBar
                android:id="@+id/sbImporteFiltrarFactura"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_size_4"
                android:max="0"
                android:min="0"
                android:progressTint="@color/green_500"
                android:thumbTint="@color/green_500"
                app:layout_constraintEnd_toStartOf="@+id/dlMargenDerechoFiltrarFactura"
                app:layout_constraintStart_toStartOf="@+id/dlMargenIzquierdoFiltrarFactura"
                app:layout_constraintTop_toBottomOf="@+id/tvMinImporteFiltrarFactura" />

            <TextView
                android:id="@+id/tvTitleEstadoFiltrarFactura"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/GlobalMarginTopFiltrarFacturas"
                android:text="@string/tvTitleEstadoFiltrarFacturaText"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/dlMargenIzquierdoFiltrarFactura"
                app:layout_constraintTop_toBottomOf="@+id/dImporteEstadoFiltrarFactura" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/chPagadoFiltrarFactura"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="-6dp"
                android:text="@string/chPagadoFiltrarFacturaText"
                app:layout_constraintStart_toStartOf="@+id/dlMargenIzquierdoFiltrarFactura"
                app:layout_constraintTop_toBottomOf="@+id/tvTitleEstadoFiltrarFactura" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/chAnuladasFiltrarFactura"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="-6dp"
                android:text="@string/chAnuladasFiltrarFacturaText"
                app:layout_constraintStart_toStartOf="@+id/dlMargenIzquierdoFiltrarFactura"
                app:layout_constraintTop_toBottomOf="@+id/chPagadoFiltrarFactura" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/chCuotaFijaFiltrarFactura"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="-6dp"
                android:text="@string/chCuotaFijaFiltrarFacturaText"
                app:layout_constraintStart_toStartOf="@+id/dlMargenIzquierdoFiltrarFactura"
                app:layout_constraintTop_toBottomOf="@+id/chAnuladasFiltrarFactura" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/chPedientesDePagoFiltrarFactura"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="-6dp"
                android:text="@string/chPedientesDePagoFiltrarFacturaText"
                app:layout_constraintStart_toStartOf="@+id/dlMargenIzquierdoFiltrarFactura"
                app:layout_constraintTop_toBottomOf="@+id/chCuotaFijaFiltrarFactura" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/chPlanDePagoFiltrarFactura"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="-6dp"
                android:text="@string/chPlanDePagoFiltrarFacturaText"
                app:layout_constraintStart_toStartOf="@+id/dlMargenIzquierdoFiltrarFactura"
                app:layout_constraintTop_toBottomOf="@+id/chPedientesDePagoFiltrarFactura" />

            <TextView
                android:id="@+id/tvMinImporteFiltrarFactura"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_size_8"
                app:layout_constraintStart_toStartOf="@+id/dlMargenIzquierdoFiltrarFactura"
                app:layout_constraintTop_toBottomOf="@+id/tvTitleImporteFiltrarFactura" />

            <TextView
                android:id="@+id/tvMaxImporteFiltrarFactura"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_size_8"
                app:layout_constraintEnd_toStartOf="@+id/dlMargenDerechoFiltrarFactura"
                app:layout_constraintTop_toBottomOf="@+id/tvTitleImporteFiltrarFactura" />

            <TextView
                android:id="@+id/tvRankImporteFiltrarFactura"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_size_4"
                android:text="@string/tvRankImporteFiltrarFacturaText"
                android:textColor="@color/green_500"
                app:layout_constraintEnd_toStartOf="@+id/tvMaxImporteFiltrarFactura"
                app:layout_constraintHorizontal_bias="0.50"
                app:layout_constraintStart_toEndOf="@+id/tvMinImporteFiltrarFactura"
                app:layout_constraintTop_toBottomOf="@+id/tvTitleImporteFiltrarFactura" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/dlMargenIzquierdoFiltrarFactura"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="@dimen/dimen_size_20" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/dlMargenDerechoFiltrarFactura"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="@dimen/dimen_size_20" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btAplicarFiltroFiltrarFactura"
        style="@style/botones_primarios"
        android:layout_width="@dimen/dimen_size_0"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_size_44"
        android:layout_marginEnd="@dimen/dimen_size_44"
        android:layout_marginBottom="@dimen/dimen_size_16"
        android:text="@string/btAplicarFiltroFiltrarFacturaText"
        app:layout_constraintBottom_toTopOf="@+id/btEliminarFiltroFiltrarFactura"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btEliminarFiltroFiltrarFactura"
        style="@style/botones_secundarios"
        android:layout_width="@dimen/dimen_size_0"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_size_70"
        android:text="@string/btEliminarFiltroFiltrarFacturaText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btAplicarFiltroFiltrarFactura"
        app:layout_constraintStart_toStartOf="@+id/btAplicarFiltroFiltrarFactura" />

</androidx.constraintlayout.widget.ConstraintLayout>